--- a/Projeto/api_hotel/package.json
+++ b/Projeto/api_hotel/package.json
@@ -2,9 +2,10 @@
   "name": "api_hotel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon api/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "esbuild-register": "^3.5.0",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
