--- a/Projeto/front_hotel/package.json
+++ b/Projeto/front_hotel/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
